--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "gulp jshint; gulp mocha"
   },
   "files": [
     "index.js",
@@ -32,6 +32,9 @@
   },
   "devDependencies": {
     "mocha": "~1.17.1",
-    "chai": "~1.9.0"
+    "chai": "~1.9.0",
+    "gulp": "~3.5.2",
+    "gulp-jshint": "~1.5.0",
+    "gulp-mocha": "~0.4.1"
   }
 }
