--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "through2": "~0.4.1",
     "gulp-util": "~2.2.14",
-    "angular-gettext-tools": "0.0.5"
+    "angular-gettext-tools": "0.0.5",
+    "lodash.isstring": "~2.4.1"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
