--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "lodash.isstring": "~2"
   },
   "devDependencies": {
-    "mocha": "~2",
+    "async": "~0.9",
     "chai": "~1",
+    "mocha": "~2",
     "pofile": "~0.2"
   }
 }
