--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash.isstring": "~2.4.1"
   },
   "devDependencies": {
+    "async": "~0.9",
     "mocha": "~1.17.1",
     "chai": "~1.9.0",
     "pofile": "~0.2.7"
