--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
   ],
   "main": "index.js",
   "dependencies": {
-    "through2": "~0.4.1",
-    "gulp-util": "~2.2.14",
+    "through2": "~0.6.3",
+    "gulp-util": "~3.0.2",
     "angular-gettext-tools": "^2.0.1",
     "lodash.isstring": "~2.4.1"
   },
   "devDependencies": {
-    "mocha": "~1.17.1",
-    "chai": "~1.9.0",
+    "mocha": "^2.1.0",
+    "chai": "^1.10.0",
     "pofile": "~0.2.7"
   }
 }
