--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "mocha"
+    "lint": "eslint *.js lib/**/*.js test/**/*.js",
+    "test": "npm run lint && mocha"
   },
   "files": [
     "index.js",
@@ -31,8 +32,9 @@
     "lodash.isstring": "~2.4.1"
   },
   "devDependencies": {
-    "mocha": "^2.1.0",
     "chai": "^1.10.0",
+    "eslint": "^2.10.2",
+    "mocha": "^2.1.0",
     "pofile": "~0.2.7"
   }
 }
