--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
   ],
   "main": "index.js",
   "dependencies": {
-    "through2": "~0.6.3",
-    "gulp-util": "~3.0.2",
-    "angular-gettext-tools": "^2.0.1",
-    "lodash.isstring": "~2.4.1"
+    "through2": "^2.0.1",
+    "gulp-util": "^3.0.7",
+    "angular-gettext-tools": "^2.2.0",
+    "lodash.isstring": "^4.0.1"
   },
   "devDependencies": {
-    "chai": "^1.10.0",
+    "chai": "^3.5.0",
     "eslint": "^2.10.2",
-    "mocha": "^2.1.0",
-    "pofile": "~0.2.7"
+    "mocha": "^2.4.5",
+    "pofile": "^1.0.2"
   }
 }
