--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
   ],
   "main": "index.js",
   "dependencies": {
+    "angular-gettext-tools": "^2.2.0",
+    "plugin-error": "^1.0.1",
     "through2": "^2.0.1",
-    "gulp-util": "^3.0.7",
-    "angular-gettext-tools": "^2.2.0"
+    "vinyl": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
